# CppSocketsXPlatform

./: .clang-format  .clang-tidy  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  TcpEchoMain.cpp  UdpEchoMain.cpp  todo.txt
.github/workflows/: auto-formatting.yaml  build-and-test.yaml  linting.yaml  unit-tests.yaml
EchoServers/: .clang-tidy  CMakeLists.txt  EchoServers.cpp  EchoServers.h  TcpEchoMain.cpp  UdpEchoMain.cpp
EchoServers/EchoServers/: CMakeLists.txt  EchoServers.cpp  EchoServers.h  TcpEchoClientMain.cpp  TcpEchoMain.cpp  UdpEchoClientMain.cpp  UdpEchoMain.cpp
StrapperNet/: CMakeLists.txt
StrapperNet/include/strapper/net/: Endian.h  ErrorCode.h  IpAddress.h  NativeContext.h  SocketError.h  SocketHandle.h  SystemContext.h  TcpBasicListener.h  TcpBasicSocket.h  TcpListener.h  TcpListenerEc.h  TcpSerializer.h  TcpSocket.h  TcpSocketEc.h  UdpBasicSocket.h  UdpSocket.h  UdpSocketEc.h
StrapperNet/lib/: IpAddress.cpp  TcpListener.cpp  TcpListenerEc.cpp  TcpSerializer.cpp  TcpSocket.cpp  TcpSocketEc.cpp  UdpSocket.cpp  UdpSocketEc.cpp
StrapperNet/lib/linux/: CMakeLists.txt  Endian.cpp  ErrorCode.cpp  SocketFd.h  SocketHandle.cpp  SystemContext.cpp  TcpBasicListener.cpp  TcpBasicSocket.cpp  UdpBasicSocket.cpp
StrapperNet/lib/windows/: CMakeLists.txt  Endian.cpp  ErrorCode.cpp  NativeContext.cpp  NativeContext.h  SocketFd.h  SocketHandle.cpp  SocketIncludes.h  SystemContext.cpp  TcpBasicListener.cpp  TcpBasicSocket.cpp  UdpBasicSocket.cpp  WinsockContext.cpp  WinsockContext.h
UnitTest/: .clang-tidy  Basic.cpp  CMakeLists.txt  Endian.cpp  Error.cpp  README.md  TcpSerialize.cpp  TestGlobals.cpp  TestGlobals.h  TestReport.h  Timeout.h  UnitTestBasic.cpp  UnitTestEndian.cpp  UnitTestError.cpp  UnitTestIpAddress.cpp  UnitTestMain.cpp  UnitTestMain.h  UnitTestProtocol.cpp  UnitTestSerialize.cpp  UnitTestShutdown.cpp  UnitTestShutdownPerms.cpp  UnitTestSocket.cpp
UnitTest/UnitTest/: TestGlobals.cpp  TestGlobals.h  Timeout.h  UnitTestEndian.cpp  UnitTestError.cpp  UnitTestIpAddress.cpp  UnitTestMain.cpp  UnitTestProtocol.cpp  UnitTestSerialize.cpp  UnitTestShutdown.cpp  UnitTestSocket.cpp
posix/: CMakeLists.txt  TcpListener.cpp  TcpListener.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h  WinsockContextManager.h
scripts/: pocc-shim.py  shim_utils.py  test_shim_utils.py
windows/: CMakeLists.txt  ErrorCode.cpp  ErrorCode.h  IpAddress.cpp  IpAddress.h  NetworkError.h  SocketError.h  SocketHandle.cpp  SocketHandle.h  SocketIncludes.h  TcpBasicListener.cpp  TcpBasicListener.h  TcpBasicSocket.cpp  TcpBasicSocket.h  TcpListener.cpp  TcpListener.h  TcpListenerBase.cpp  TcpListenerBase.h  TcpListenerEc.cpp  TcpListenerEc.h  TcpSerializer.cpp  TcpSerializer.h  TcpSocket.cpp  TcpSocket.h  TcpSocketBase.cpp  TcpSocketBase.h  TcpSocketEc.cpp  TcpSocketEc.h  UdpBasicSocket.cpp  UdpBasicSocket.h  UdpSocket.cpp  UdpSocket.h  UdpSocketBase.cpp  UdpSocketBase.h  UdpSocketEc.cpp  UdpSocketEc.h  WinsockContext.cpp  WinsockContext.h  WinsockContextManager.h
